@@ -1,6 +1,6 @@
 {
   "name": "simp-oath",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "https://github.com/simp/pupmod-simp-oath/graphs/contributors",
   "summary": "Installation and config for pam_oath rpm",
   "license": "Apache-2.0",
@@ -19,14 +19,20 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.11.0 < 5.0.0"
+      "version_requirement": ">= 4.5.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 6.6.0 < 8.0.0"
+      "version_requirement": ">= 6.6.0 < 9.0.0"
     }
   ],
   "operatingsystem_support": [
+    {
+      "operatingsystem": "Amazon",
+      "operatingsystemrelease": [
+        "2"
+      ]
+    },
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
