@@ -1,18 +1,0 @@
-HOSTS:
-  el7:
-    roles:
-      - default
-      - master
-      - client
-    platform:   el-7-x86_64
-    box:        centos/7
-    hypervisor: vagrant
-    yum_repos:
-      epel:
-        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=$basearch'
-        gpgkeys:
-          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
-CONFIG:
-  log_level: verbose
-  type: aio
-  vagrant_memsize: 256
