@@ -1,3 +1,6 @@
+* Sat Oct 15 2022 Trevor Vaughan <trevor@sicura.us> - 0.4.0
+- Add support for Amazon Linux 2
+
 * Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
